{
  "version": 4,
  "terraform_version": "1.7.1",
  "serial": 69,
  "lineage": "ff8d2d24-5de0-b7be-0943-116219677ce9",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "web_linuxvm_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/b1facc8e-4a54-4c0d-9438-530dead2c9f2/resourceGroups/resourceGroup1/providers/Microsoft.Network/networkInterfaces/resourceGroup1-web-linuxvm-nic",
            "internal_domain_name_suffix": "4wofzcocvrnudi4ocmrcgm0otg.dx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "web-linuxvm-ip-1",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/b1facc8e-4a54-4c0d-9438-530dead2c9f2/resourceGroups/resourceGroup1/providers/Microsoft.Network/publicIPAddresses/resourceGroup1-linuxvm-publicip",
                "subnet_id": "/subscriptions/b1facc8e-4a54-4c0d-9438-530dead2c9f2/resourceGroups/resourceGroup1/providers/Microsoft.Network/virtualNetworks/my-vnet/subnets/internal"
              }
            ],
            "location": "westus",
            "mac_address": "00-0D-3A-58-E3-BC",
            "name": "resourceGroup1-web-linuxvm-nic",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "resourceGroup1",
            "virtual_machine_id": "/subscriptions/b1facc8e-4a54-4c0d-9438-530dead2c9f2/resourceGroups/resourceGroup1/providers/Microsoft.Compute/virtualMachines/resourceGroup1-web-linuxvm"
          },
          "dependencies": [
            "azurerm_public_ip.web_linuxvm_publicip",
            "azurerm_resource_group.example",
            "azurerm_subnet.example",
            "azurerm_virtual_network.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "web_vmnic_nsg_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b1facc8e-4a54-4c0d-9438-530dead2c9f2/resourceGroups/resourceGroup1/providers/Microsoft.Network/networkInterfaces/resourceGroup1-web-linuxvm-nic|/subscriptions/b1facc8e-4a54-4c0d-9438-530dead2c9f2/resourceGroups/resourceGroup1/providers/Microsoft.Network/networkSecurityGroups/resourceGroup1-web-linuxvm-nic-nsg",
            "network_interface_id": "/subscriptions/b1facc8e-4a54-4c0d-9438-530dead2c9f2/resourceGroups/resourceGroup1/providers/Microsoft.Network/networkInterfaces/resourceGroup1-web-linuxvm-nic",
            "network_security_group_id": "/subscriptions/b1facc8e-4a54-4c0d-9438-530dead2c9f2/resourceGroups/resourceGroup1/providers/Microsoft.Network/networkSecurityGroups/resourceGroup1-web-linuxvm-nic-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.web_linuxvm_nic",
            "azurerm_network_security_group.web_vmnic_nsg",
            "azurerm_network_security_rule.web_vmnic_nsg_rule_inbound",
            "azurerm_public_ip.web_linuxvm_publicip",
            "azurerm_resource_group.example",
            "azurerm_subnet.example",
            "azurerm_virtual_network.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web_vmnic_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b1facc8e-4a54-4c0d-9438-530dead2c9f2/resourceGroups/resourceGroup1/providers/Microsoft.Network/networkSecurityGroups/resourceGroup1-web-linuxvm-nic-nsg",
            "location": "westus",
            "name": "resourceGroup1-web-linuxvm-nic-nsg",
            "resource_group_name": "resourceGroup1",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-Port-22",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-Port-443",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-Port-80",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_interface.web_linuxvm_nic",
            "azurerm_public_ip.web_linuxvm_publicip",
            "azurerm_resource_group.example",
            "azurerm_subnet.example",
            "azurerm_virtual_network.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "web_vmnic_nsg_rule_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/b1facc8e-4a54-4c0d-9438-530dead2c9f2/resourceGroups/resourceGroup1/providers/Microsoft.Network/networkSecurityGroups/resourceGroup1-web-linuxvm-nic-nsg/securityRules/Rule-Port-80",
            "name": "Rule-Port-80",
            "network_security_group_name": "resourceGroup1-web-linuxvm-nic-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "resourceGroup1",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_interface.web_linuxvm_nic",
            "azurerm_network_security_group.web_vmnic_nsg",
            "azurerm_public_ip.web_linuxvm_publicip",
            "azurerm_resource_group.example",
            "azurerm_subnet.example",
            "azurerm_virtual_network.example"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/b1facc8e-4a54-4c0d-9438-530dead2c9f2/resourceGroups/resourceGroup1/providers/Microsoft.Network/networkSecurityGroups/resourceGroup1-web-linuxvm-nic-nsg/securityRules/Rule-Port-443",
            "name": "Rule-Port-443",
            "network_security_group_name": "resourceGroup1-web-linuxvm-nic-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "resourceGroup1",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_interface.web_linuxvm_nic",
            "azurerm_network_security_group.web_vmnic_nsg",
            "azurerm_public_ip.web_linuxvm_publicip",
            "azurerm_resource_group.example",
            "azurerm_subnet.example",
            "azurerm_virtual_network.example"
          ]
        },
        {
          "index_key": "120",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/b1facc8e-4a54-4c0d-9438-530dead2c9f2/resourceGroups/resourceGroup1/providers/Microsoft.Network/networkSecurityGroups/resourceGroup1-web-linuxvm-nic-nsg/securityRules/Rule-Port-22",
            "name": "Rule-Port-22",
            "network_security_group_name": "resourceGroup1-web-linuxvm-nic-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "resourceGroup1",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_interface.web_linuxvm_nic",
            "azurerm_network_security_group.web_vmnic_nsg",
            "azurerm_public_ip.web_linuxvm_publicip",
            "azurerm_resource_group.example",
            "azurerm_subnet.example",
            "azurerm_virtual_network.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "web_linuxvm_publicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/b1facc8e-4a54-4c0d-9438-530dead2c9f2/resourceGroups/resourceGroup1/providers/Microsoft.Network/publicIPAddresses/resourceGroup1-linuxvm-publicip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "104.42.146.11",
            "ip_version": "IPv4",
            "location": "westus",
            "name": "resourceGroup1-linuxvm-publicip",
            "resource_group_name": "resourceGroup1",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/b1facc8e-4a54-4c0d-9438-530dead2c9f2/resourceGroups/resourceGroup1/providers/Microsoft.Network/virtualNetworks/my-vnet/subnets/internal",
            "name": "internal",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "resourceGroup1",
            "virtual_network_name": "my-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.example",
            "azurerm_virtual_network.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "895c9cf5-acc2-415b-a3ce-132223334e9e",
            "id": "/subscriptions/b1facc8e-4a54-4c0d-9438-530dead2c9f2/resourceGroups/resourceGroup1/providers/Microsoft.Network/virtualNetworks/my-vnet",
            "location": "westus",
            "name": "my-vnet",
            "resource_group_name": "resourceGroup1",
            "subnet": [
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/b1facc8e-4a54-4c0d-9438-530dead2c9f2/resourceGroups/resourceGroup1/providers/Microsoft.Network/virtualNetworks/my-vnet/subnets/internal",
                "name": "internal"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.example"
          ]
        }
      ]
    }
  ]
}